--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Pokedex</title>
 </head>
 
-<body>
+<body class="body">
     <div class="container" id="blur">
         <header class="header">
             <a href="#">
